--- a/scss/_structure.scss
+++ b/scss/_structure.scss
@@ -35,11 +35,22 @@ img{
   ul li img{
     float: left;
     display: block;
-    width: 50px;
+    width: 75px;
+    margin-right: 20px;
 }
 ul li a, ul li p{
-      margin: 0 10px 0 70px;
+      margin: 0 10px 0 0px;
       font-size: 13px;
 }
 
+}
+
+.news-roll{
+  @extend .blog-roll;
+  ul{
+    list-style-type: none;
+  }
+  ul li a{
+    display: inline-block;
+  }
 }
