Styled the topbar

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1171,7 +1171,7 @@ $header-font-family: 'Montserrat', "Helvetica", sans-serif;
 
 // Background color for the top bar
 $topbar-bg-color: #00b3cb;
-// $topbar-bg: $topbar-bg-color;
+$topbar-bg: $topbar-bg-color;
 
 // Height and margin
  $topbar-height: 80px;
@@ -1184,7 +1184,7 @@ $topbar-bg-color: #00b3cb;
 // Style the top bar dropdown elements
 $topbar-dropdown-bg: #00dffc;
 // $topbar-dropdown-link-color: #fff;
-// $topbar-dropdown-link-bg: #333;
+$topbar-dropdown-link-bg: #333;
 // $topbar-dropdown-link-weight: normal;
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: #fff;
@@ -1192,12 +1192,12 @@ $topbar-dropdown-bg: #00dffc;
 
 // Set the link colors and styles for top-level nav
 // $topbar-link-color: #fff;
-// $topbar-link-color-hover: #fff;
+$topbar-link-color-hover: #fff;
 // $topbar-link-color-active: #fff;
 // $topbar-link-color-active-hover: #fff;
 // $topbar-link-weight: normal;
 // $topbar-link-font-size: rem-calc(13);
-// $topbar-link-hover-lightness: -10%; // Darken by 10%
+ $topbar-link-hover-lightness: -80%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-hover: #272727;
 // $topbar-link-bg-active: $primary-color;
