--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 @import "settings";
 @import "foundation";
 @import "structure";
+@import "overlay";
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
