--- a/scss/_overlay.scss
+++ b/scss/_overlay.scss
@@ -1,8 +1,39 @@
+.box-item{
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.box-image{
+    overflow: hidden;
+    display: block;
+    position: relative;
+}
+
+.box-item .box-image img{
+    width: 100%;
+    height: auto;
+}
+
 .overlay{
+    width: 100%;
+    height: 100%;
     position: absolute;
-    width: 200px;
-    height: 200px;
-    transition: 0.3;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    cursor: crosshair;
+}
+
+.box-item:hover .overlay{
     opacity: 1;
-    background-color: #dddddd;
+    background-color: #333333;
+    transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -webkit-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
 }
