--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -38,7 +38,7 @@
 }
 
 .blog-roll {
-    @include box(0px, 10px, 0px, #b9b9b9);
+    @include box(0px, 5px, 0px, #b9b9b9);
     @extend .panel;
     overflow: hidden;
     li img {
@@ -66,7 +66,7 @@ ul.meta-social {
         a {
             background: #dfdfdf;
             padding: 4px 10px 4px 5px;
-            border-radius: 2px 2px 2px 2px;
+            border-radius: 1px 2px 2px 2px;
         }
     }
 }
@@ -97,4 +97,15 @@ footer{
   p{
     color: #ffffff;
   }
+}
+
+.product-panel{
+    @include panel(lighten($primary-color, 20%), 15px 10px 5px);
+    &:hover, &:focus{
+        background-color: scale-color($primary-color, $lightness: 10%);
+      transition: all 0.1s ease-in;
+    }
+    p{
+        color: #fff;
+    }
 }
