--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,6 @@
 @import "settings";
 @import "foundation";
-@import "structure";
+@import "custom";
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
