--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -81,6 +81,11 @@ ul.meta-social {
     }
 }
 
+.meta-data li{
+    font-size: 11px;
+    margin-left: 0px;
+}
+
 footer{
   background-color: #1b78ac;
   h4{
