--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -56,12 +56,12 @@ $header-font-family: 'Montserrat', "Helvetica", sans-serif;
 // $default-float: left;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
-// $alert-color: #f04124;
-// $success-color: #43AC6A;
-// $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+ $primary-color: #008CBA;
+ $secondary-color: #e7e7e7;
+ $alert-color: #f04124;
+ $success-color: #43AC6A;
+ $warning-color: #f08a24;
+ $info-color: #a0d3e8;
 
 // We use these to make sure border radius matches unless we want it different.
 // $global-radius: 3px;
@@ -1183,23 +1183,23 @@ $topbar-bg: $topbar-bg-color;
 
 // Style the top bar dropdown elements
 $topbar-dropdown-bg: #00dffc;
-// $topbar-dropdown-link-color: #fff;
-$topbar-dropdown-link-bg: #333;
-// $topbar-dropdown-link-weight: normal;
-// $topbar-dropdown-toggle-size: 5px;
-// $topbar-dropdown-toggle-color: #fff;
-// $topbar-dropdown-toggle-alpha: 0.4;
+ $topbar-dropdown-link-color: #fff;
+$topbar-dropdown-link-bg: scale-color($topbar-dropdown-bg, $alpha: -20%);
+$topbar-dropdown-link-weight: normal;
+ $topbar-dropdown-toggle-size: 5px;
+ $topbar-dropdown-toggle-color: #fff;
+ $topbar-dropdown-toggle-alpha: 0.4;
 
 // Set the link colors and styles for top-level nav
-// $topbar-link-color: #fff;
+ $topbar-link-color: #fff;
 $topbar-link-color-hover: #fff;
 // $topbar-link-color-active: #fff;
-// $topbar-link-color-active-hover: #fff;
+$topbar-link-color-active-hover: #fff;
 // $topbar-link-weight: normal;
 // $topbar-link-font-size: rem-calc(13);
  $topbar-link-hover-lightness: -80%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
-// $topbar-link-bg-hover: #272727;
+ $topbar-link-bg-hover: scale-color($topbar-bg-color, $alpha: -40%);
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
