--- a/css/app.css
+++ b/css/app.css
@@ -5032,3 +5032,106 @@ i {
 /* Misc */
 .icon-base {
   color: #008CBA; }
+
+.grid {
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+  list-style: none;
+  text-align: center; }
+
+figure {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  overflow: hidden;
+  margin: -0.135em;
+  width: 25%;
+  height: 350px;
+  background: #008CBA;
+  text-align: center;
+  cursor: pointer; }
+  figure img {
+    position: relative;
+    display: block;
+    min-height: 100%;
+    opacity: 0.5; }
+  figure figcaption {
+    padding: 2em;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    -webkit-backface-visibility: hidden;
+    backface-visibilty: hidden; }
+    figure figcaption::before, figure figcaption::after {
+      pointer-events: none; }
+  figure figcaption, figure a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  figure a {
+    z-index: 1000;
+    text-indent: 200%;
+    white-space: nowrap;
+    font-size: 0;
+    opacity: 0; }
+  figure h2 {
+    word-spacing: -0.15em;
+    font-weight: 300;
+    color: #fff; }
+    figure h2 span {
+      font-weight: 800; }
+  figure h2, figure p {
+    margin: 0; }
+  figure p {
+    letter-spacing: 1px;
+    font-size: 68.5%; }
+
+.slide {
+  background: #008CBA;
+  background: #008CBA; }
+  .slide img {
+    opacity: 0.7;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  .slide figcaption {
+    padding: 3em;
+    -webkit-transition: opacity 0.35s;
+    transition: opacity 0.35s; }
+  .slide figcaption::before {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    bottom: 30px;
+    left: 30px;
+    border: 1px solid #fff;
+    content: ' '; }
+  .slide h2 {
+    margin: 20% 0 10px 0;
+    -webkit-transition: -webkit-transform 0.35s;
+    transition: -webkit-transform 0.35s;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0); }
+  .slide figcaption::before, .slide p {
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  .slide:hover h2 {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  .slide:hover figcaption::before, .slide:hover p {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  .slide:hover figcaption {
+    background-color: rgba(58, 52, 42, 0); }
+  .slide:hover img {
+    opacity: 0.4;
+    -webkit-transform: scale(1.75);
+    transform: scale(1.75); }
