--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -19,7 +19,7 @@
 
 .office {
     position: relative;
-    background: url(/img/skyline-test.jpg);
+    background: url(/img/office/salt-lake-city.jpg);
     //background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
