--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -64,8 +64,8 @@ $header-font-family: 'Montserrat', "Helvetica", sans-serif;
  $info-color: #a0d3e8;
 
 // We use these to make sure border radius matches unless we want it different.
-// $global-radius: 3px;
-// $global-rounded: 1000px;
+ $global-radius: 3px;
+ $global-rounded: 1000px;
 
 // We use these to control inset shadow shiny edges and depressions.
 // $shiny-edge-size: 0 1px 0;
@@ -499,29 +499,29 @@ $header-font-family: 'Montserrat', "Helvetica", sans-serif;
 // $include-html-form-classes: $include-html-classes;
 
 // We use this to set the base for lots of form spacing and positioning styles
-// $form-spacing: rem-calc(16);
+ $form-spacing: rem-calc(19);
 
 // We use these to style the labels in different ways
-// $form-label-pointer: pointer;
-// $form-label-font-size: rem-calc(14);
-// $form-label-font-weight: normal;
-// $form-label-line-height: 1.5;
-// $form-label-font-color: scale-color(#000, $lightness: 30%);
-// $form-label-small-transform: capitalize;
-// $form-label-bottom-margin: 0;
-// $input-font-family: inherit;
-// $input-font-color: rgba(0,0,0,0.75);
-// $input-font-size: rem-calc(14);
-// $input-bg-color: #fff;
-// $input-focus-bg-color: scale-color(#fff, $lightness: -2%);
-// $input-border-color: scale-color(#fff, $lightness: -20%);
-// $input-focus-border-color: scale-color(#fff, $lightness: -40%);
-// $input-border-style: solid;
-// $input-border-width: 1px;
-// $input-border-radius: $global-radius;
-// $input-disabled-bg: #ddd;
-// $input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-// $input-include-glowing-effect: true;
+ $form-label-pointer: pointer;
+ $form-label-font-size: rem-calc(14);
+ $form-label-font-weight: normal;
+ $form-label-line-height: 1.5;
+ $form-label-font-color: scale-color(#000, $lightness: 30%);
+ $form-label-small-transform: capitalize;
+ $form-label-bottom-margin: 0;
+ $input-font-family: inherit;
+ $input-font-color: rgba(0,0,0,0.75);
+ $input-font-size: rem-calc(14);
+ $input-bg-color: #fff;
+ $input-focus-bg-color: scale-color(#fff, $lightness: -2%);
+ $input-border-color: scale-color(#fff, $lightness: -20%);
+ $input-focus-border-color: scale-color(#fff, $lightness: -40%);
+ $input-border-style: solid;
+ $input-border-width: 2px;
+ $input-border-radius: $global-radius;
+ $input-disabled-bg: #ddd;
+ $input-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+ $input-include-glowing-effect: true;
 
 // We use these to style the fieldset border and spacing.
 // $fieldset-border-style: solid;
@@ -554,8 +554,8 @@ $header-font-family: 'Montserrat', "Helvetica", sans-serif;
 // $input-error-message-font-color-alt: #333;
 
 // We use this to style the glowing effect of inputs when focused
-// $glowing-effect-fade-time: 0.45s;
-// $glowing-effect-color: $input-focus-border-color;
+ $glowing-effect-fade-time: 0.45s;
+ $glowing-effect-color: $primary-color;
 
 // Select variables
 // $select-bg-color: #fafafa;
@@ -1178,8 +1178,8 @@ $topbar-bg: $topbar-bg-color;
  $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
-// $topbar-title-weight: normal;
-// $topbar-title-font-size: rem-calc(17);
+ $topbar-title-weight: normal;
+ $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
 $topbar-dropdown-bg: #00dffc;
@@ -1196,18 +1196,18 @@ $topbar-link-color-hover: #fff;
 // $topbar-link-color-active: #fff;
 $topbar-link-color-active-hover: #fff;
 // $topbar-link-weight: normal;
-// $topbar-link-font-size: rem-calc(13);
+ $topbar-link-font-size: rem-calc(14);
  $topbar-link-hover-lightness: -80%; // Darken by 10%
-// $topbar-link-bg: $topbar-bg;
+ $topbar-link-bg: $topbar-bg;
  $topbar-link-bg-hover: scale-color($topbar-bg-color, $alpha: -40%);
-// $topbar-link-bg-active: $primary-color;
-// $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
-// $topbar-link-font-family: $body-font-family;
-// $topbar-link-text-transform: none;
-// $topbar-link-padding: $topbar-height / 3;
+ $topbar-link-bg-active: $primary-color;
+ $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
+ $topbar-link-font-family: $body-font-family;
+ $topbar-link-text-transform: uppercase;
+ $topbar-link-padding: $topbar-height / 6;
 
-// $topbar-button-font-size: 0.75rem;
-// $topbar-button-top: 7px;
+$topbar-button-font-size: 1rem;
+$topbar-button-top: 7px;
 
 // $topbar-dropdown-label-color: #777;
 // $topbar-dropdown-label-text-transform: uppercase;
