--- a/css/app.css
+++ b/css/app.css
@@ -1793,6 +1793,82 @@ label.error {
   .th.radius {
     border-radius: 3px; }
 
+/* Tooltips */
+.has-tip {
+  border-bottom: dotted 1px #ccc;
+  cursor: help;
+  font-weight: bold;
+  color: #333; }
+  .has-tip:hover, .has-tip:focus {
+    border-bottom: dotted 1px #004054;
+    color: #008CBA; }
+  .has-tip.tip-left, .has-tip.tip-right {
+    float: none !important; }
+
+.tooltip {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  font-weight: normal;
+  font-size: 0.875rem;
+  line-height: 1.3;
+  padding: 0.75rem;
+  max-width: 300px;
+  left: 50%;
+  width: 100%;
+  color: #fff;
+  background: #333; }
+  .tooltip > .nub {
+    display: block;
+    left: 5px;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: solid 5px;
+    border-color: transparent transparent #333 transparent;
+    top: -10px; }
+    .tooltip > .nub.rtl {
+      left: auto;
+      right: 5px; }
+  .tooltip.radius {
+    border-radius: 3px; }
+  .tooltip.round {
+    border-radius: 1000px; }
+    .tooltip.round > .nub {
+      left: 2rem; }
+  .tooltip.opened {
+    color: #008CBA !important;
+    border-bottom: dotted 1px #004054 !important; }
+
+.tap-to-close {
+  display: block;
+  font-size: 0.625rem;
+  color: #777;
+  font-weight: normal; }
+
+@media only screen and (min-width:40.063em) {
+  .tooltip > .nub {
+    border-color: transparent transparent #333 transparent;
+    top: -10px; }
+  .tooltip.tip-top > .nub {
+    border-color: #333 transparent transparent transparent;
+    top: auto;
+    bottom: -10px; }
+  .tooltip.tip-left, .tooltip.tip-right {
+    float: none !important; }
+  .tooltip.tip-left > .nub {
+    border-color: transparent transparent transparent #333;
+    right: -10px;
+    left: auto;
+    top: 50%;
+    margin-top: -5px; }
+  .tooltip.tip-right > .nub {
+    border-color: transparent #333 transparent transparent;
+    right: auto;
+    left: -10px;
+    top: 50%;
+    margin-top: -5px; } }
+
 meta.foundation-mq-topbar {
   font-family: "/only screen and (min-width:40.063em)/";
   width: 40.063em; }
@@ -2889,16 +2965,16 @@ th.hide-for-touch {
 
 /* Mixins */
 .odd, .even {
-  background-color: #f4f3f3;
+  background-color: #008CBA;
   border-bottom: 1px solid #d5d5d5;
   padding: 30px 0px; }
 
 .even {
-  background: #71a441 url(/img/halftone.png); }
+  background: #71a441 url('/img/halftone.png'); }
 
 .hiring {
   position: relative;
-  background: url(/img/office.jpg);
+  background: url('/img/office.jpg');
   min-height: 20em;
   background-size: cover;
   background-position: fixed; }
