--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -7,19 +7,19 @@
 }
 
 .odd {
-    background-color: #f4f3f3;
+    background-color: $primary-color;
     border-bottom: 1px solid #d5d5d5;
     padding: 30px 0px;
 }
 
 .even {
     @extend .odd;
-    background: #71a441 url(/img/halftone.png);
+    background: #71a441 url('/img/halftone.png');
 }
 
 .hiring {
     position: relative;
-    background: url(/img/office.jpg);
+    background: url('/img/office.jpg');
     min-height: 20em;
     background-size: cover;
     background-position: fixed;
