--- a/scss/_office.scss
+++ b/scss/_office.scss
@@ -28,6 +28,7 @@ figure {
         color: #fff;
         text-transform: uppercase;
         font-size: 1.25em;
+        width: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibilty: hidden;
         &::before, &::after {
@@ -38,7 +39,6 @@ figure {
         position: absolute;
         top: 0;
         left: 0;
-        //width: 100%;
         height: 100%;
     }
     a {
